--- a/catalog.html
+++ b/catalog.html
@@ -78,22 +78,27 @@
                    <form class="osob" action="">
                        <label for="slide">
                            <input class="visually_hidden" id="slide" type="checkbox">
+                           <span class="checkbox_osob"></span>
                            <p>Слайдер</p>
                        </label>
                        <label for="block">
                            <input class="visually_hidden" id="block" type="checkbox">
+                           <span class="checkbox_osob"></span>
                            <p>Блок преимуществ</p>
                        </label>
                        <label for="news">
                            <input class="visually_hidden" id="news" type="checkbox">
+                           <span class="checkbox_osob"></span>
                            <p>Новости</p>
                        </label>
                        <label for="galery">
                            <input class="visually_hidden" id="galery" type="checkbox">
+                           <span class="checkbox_osob"></span>
                            <p>Галерея</p>
                        </label>
                        <label for="cart">
                            <input class="visually_hidden" id="cart" type="checkbox">
+                           <span class="checkbox_osob"></span>
                            <p>Корзина</p>
                        </label>
                    </form>
