--- a/catalog.html
+++ b/catalog.html
@@ -102,6 +102,7 @@
                            <p>Корзина</p>
                        </label>
                    </form>
+                   <button class="button button_form" type="button">Показать</button>
             </section>
             <section class="catalog_list">
                 <div class="header_catalog">
