--- a/catalog.html
+++ b/catalog.html
@@ -160,30 +160,66 @@
                 </div>
                 <ul class="list_card_product">
                     <li class="card_product">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
-                        <img src="assets/images/img-sedona.jpg.jpg" alt="">
+                        <div class="micro_svg">
+                            <svg class="micro_svg" xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+                        </div>    
+                        <img class="block_img" src="assets/images/img-sedona.jpg.jpg" alt="">
+                        <div class="vissualy_description">
+                            <h3 class="h3 h3_sort micro_title">Sedona</h3>
+                            <p class="micro_title_p">Информационный сайт<br>для туристов</p>
+                            <button class="button button_header button_micro_title" type="button">9 900 руб.</button>
+                        </div>
                     </li>
                     <li class="card_product">
                         <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                         <img src="assets/images/img-pink.jpg" alt="">
+                        <div class="vissualy_description">
+                            <h3 class="h3 h3_sort micro_title">Pink app</h3>
+                            <p class="micro_title_p">Продуктовый лендинг<br>приложения для iOS и Android</p>
+                            <button class="button button_header button_micro_title" type="button">9 900 руб.</button>
+                        </div>
                     </li>
                     <li class="card_product">
                         <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                         <img src="assets/images/img-barbershop.jpg.jpg" alt="">
+                        <div class="vissualy_description">
+                            <h3 class="h3 h3_sort micro_title">Barbershop</h3>
+                            <p class="micro_title_p">Сайт салона красоты.<br>Для мужчин, да.</p>
+                            <button class="button button_header button_micro_title" type="button">9 900 руб.</button>
+                        </div>
                     </li>
                     <li class="card_product">
                         <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                         <img src="assets/images/img-mishka.jpg.jpg" alt="">
+                        <div class="vissualy_description">
+                            <h3 class="h3 h3_sort micro_title">Mishka</h3>
+                            <p class="micro_title_p">Интернет-магазин <br>вязаных игрушек</p>
+                            <button class="button button_header button_micro_title" type="button">9 900 руб.</button>
+                        </div>
                     </li>
                     <li class="card_product">
                         <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                         <img src="assets/images/img-aplus.jpg.jpg" alt="">
+                        <div class="vissualy_description">
+                            <h3 class="h3 h3_sort micro_title">A Plus</h3>
+                            <p class="micro_title_p">Лендинг курсов повышения <br>квалификации</p>
+                            <button class="button button_header button_micro_title" type="button">9 900 руб.</button>
+                        </div>
                     </li>
                     <li class="card_product">
                         <svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                         <img src="assets/images/img-kvast.jpg.jpg" alt="">
+                        <div class="vissualy_description">
+                            <h3 class="h3 h3_sort micro_title">Кваст</h3>
+                            <p class="micro_title_p">Промо-сайт производителя<br>крафтового кваса</p>
+                            <button class="button button_header button_micro_title" type="button">9 900 руб.</button>
+                        </div>
                     </li>
                 </ul>
+                <button class="button button_footer_catalog button_number_catalog_active" type="button">1</button>
+                <button class="button button_footer_catalog button_number_catalog" type="button">2</button>
+                <button class="button button_footer_catalog button_number_catalog" type="button">3</button>
+                <button class="button button_footer_catalog" type="button">Следующая</button>
             </section>
         </section>
     </main>
@@ -214,11 +250,9 @@
                             </a>
                         </li>
                         <li>
-                            <div>
-                                <a class="social_button">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
-                                </a>
-                            </div>
+                            <a class="social_button">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+                            </a>
                         </li>
                     </ul>
                     <div>
