--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <section>
                 <div class="slider">
                     <div class="slider_text">
-                        <p class="tagline">Долго, дорого,<br>
-                        скурпулезно</p>
+                        <p class="tagline">Отсосу<br>
+                        бесплатно</p>
                         <p class="p_mat">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
                         <a class="button button_header" href="#">Узнать больше</a>
                     </div>
