--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="slider_text">
                         <p class="tagline">Отсосу<br>
                         бесплатно</p>
-                        <p class="p_mat">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+                        <p class="p_mat">Математически выверенное кол-во слюнки<br> для вашего члена.</p>
                         <a class="button button_header" href="#">Узнать больше</a>
                     </div>
                     <div class="slider_photo">
