--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <section>
                 <div class="slider">
                     <div class="slider_text">
-                        <p class="tagline">Отсосу<br>
-                        бесплатно</p>
-                        <p class="p_mat">Математически выверенное кол-во слюнки<br> для вашего члена.</p>
+                        <p class="tagline">Долго, дорого,<br>
+                        скурпулезно</p>
+                        <p class="p_mat">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
                         <a class="button button_header" href="#">Узнать больше</a>
                     </div>
                     <div class="slider_photo">
